--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "# Scatter plot\n"
+    "plt.scatter# Scatter plot\n"
    ]
   },
   {
