automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# basically Your observations about relationship in X and Y \n",
+    "# basically linearYour observations about relationship in X and Y \n",
     "\n",
     "\n",
     "\n",
