automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# basically linearYour observations about relationship in X and Y \n",
+    "# basically linear\n",
+    "\n",
+    "#Your observations about relationship in X and Y \n",
     "\n",
     "\n",
     "\n",
