automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# basically linear, linear regression seems appropriate to predict val\n",
+    "# basically linear, linear regression seems appropriate to predict values\n",
     "\n",
     "#Your observations about relationship in X and Y \n",
     "\n",
