--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
     "# Write the function to calculate slope as: \n",
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
-    "    \n",
+    "    np.mean(X)\n",
     "    pass\n",
     "\n",
     "calc_slope(X,Y)\n",
