--- a/index.ipynb
+++ b/index.ipynb
@@ -142,8 +142,8 @@
     "# Write the function to calculate slope as: \n",
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
-    "    num = np.mean(xs) *np.mean(ys) - \n",
-    "    \n",
+    "    num = np.mean(xs) *np.mean(ys) - np.mean(xs*ys)\n",
+    "    denom = \n",
     "    pass\n",
     "\n",
     "calc_slope(X,Y)\n",
