--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
     "    num = np.mean(xs) *np.mean(ys) - np.mean(xs*ys)\n",
-    "    denom = \n",
+    "    denom = np.mean(x**2)\n",
     "    pass\n",
     "\n",
     "calc_slope(X,Y)\n",
