--- a/index.ipynb
+++ b/index.ipynb
@@ -143,7 +143,7 @@
     "# (mean(x) * mean(y) – mean(x*y)) / ( mean (x)^2 – mean( x^2))\n",
     "def calc_slope(xs,ys):\n",
     "    x_hat = np.mean(xs)\n",
-    "    num = np.mean(xs) *np.mean(ys) - np.mean(xs*ys)\n",
+    "    num = x_hat *) - np.mean(xs*ys)\n",
     "    denom = np.mean(xs**2) - np.mean(x)\n",
     "    pass\n",
     "\n",
