--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,7 @@
     "    x_hat = np.mean(xs)\n",
     "    y_hat = np.mean(ys)\n",
     "    num = x_hat *y_hat - np.mean(xs*ys)\n",
-    "    denom = np.mean(xs**2) - np.mean(x)\n",
+    "    denom = np.mean(**2) - np.mean(x)\n",
     "    pass\n",
     "\n",
     "calc_slope(X,Y)\n",
