automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,8 +146,8 @@
     "    y_hat = np.mean(ys)\n",
     "    num = x_hat *y_hat - np.mean(xs*ys)\n",
     "    denom = (x_hat**2) - np.mean(xs**2)\n",
-    "    \n",
-    "    pass\n",
+    "    return num/denom\n",
+    "    pas\n",
     "\n",
     "calc_slope(X,Y)\n",
     "\n",
