--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
     "# use the slope function with intercept formula to return calculate slop and intercept from data points\n",
     "\n",
     "def best_fit(xs,ys):\n",
-    "    y\n",
+    "    x_hat = np.mean(xs)\n",
     "    pass\n",
     "\n",
     "# Uncomment below to test your function\n",
