--- a/index.ipynb
+++ b/index.ipynb
@@ -195,6 +195,8 @@
     "\n",
     "def best_fit(xs,ys):\n",
     "    x_hat = np.mean(xs)\n",
+    "    y_hat = np.mean(ys)\n",
+    "    \n",
     "    pass\n",
     "\n",
     "# Uncomment below to test your function\n",
