automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,6 +196,7 @@
     "def best_fit(xs,ys):\n",
     "    x_hat = np.mean(xs)\n",
     "    y_hat = np.mean(ys)\n",
+    "    m = calc_slope(xs,)\n",
     "    b = \n",
     "    pass\n",
     "\n",
