automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,8 +196,8 @@
     "def best_fit(xs,ys):\n",
     "    x_hat = np.mean(xs)\n",
     "    y_hat = np.mean(ys)\n",
-    "    m = calc_slope(xs,)\n",
-    "    b = \n",
+    "    m = calc_slope(xs,ys)\n",
+    "    b = y_hat - (m)\n",
     "    pass\n",
     "\n",
     "# Uncomment below to test your function\n",
