automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,8 +197,8 @@
     "    x_hat = np.mean(xs)\n",
     "    y_hat = np.mean(ys)\n",
     "    m = calc_slope(xs,ys)\n",
-    "    b = y_hat - (m)\n",
-    "    pass\n",
+    "    b = y_hat - (m*x_hat)\n",
+    "    r\n",
     "\n",
     "# Uncomment below to test your function\n",
     "\n",
