--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
     "    y_hat = np.mean(ys)\n",
     "    m = calc_slope(xs,ys)\n",
     "    b = y_hat - (m*x_hat)\n",
-    "    r\n",
+    "    return m, b\n",
     "\n",
     "# Uncomment below to test your function\n",
     "\n",
