automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
    "outputs": [],
    "source": [
     "def reg_line (m, b, xs):\n",
-    "    return Y\n",
+    "    return Y=m*xs \n",
     "    pass\n",
     "\n",
     "# Uncomment below\n",
