automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reg_line (m, b, xs):\n",
-    "    return [(m*x + b) for x in xs]\n",
-    "    pass\n",
+    "    return [(m*x) + b for x in xs]\n",
+    "\n",
     "\n",
     "# Uncomment below\n",
-    "#regression_line = reg_line(m,b,X)"
+    "regression_line = reg_line(m,b,X)"
    ]
   },
   {
