--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "plt.scatter(X# Plot data and regression line"
+    "plt.scatter(X,Y, label = # Plot data and regression line"
    ]
   },
   {
