automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
     }
    ],
    "source": [
-    "plt.scatter(X,Y, label = 'Data points'# Plot data and regression line"
+    "plt.scatter(X,Y, color='label = 'Data points'# Plot data and regression line"
    ]
   },
   {
