automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
    ],
    "source": [
     "plt.scatter(X,Y, color='c', label = 'Data points')\n",
-    "plt.plot(X, regression_line, ''# Plot data and regression line"
+    "plt.plot(X, regression_line, label ='', ''# Plot data and regression line"
    ]
   },
   {
