--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
    "outputs": [],
    "source": [
     "x_new = 7\n",
-    "y_predicted = regression_line\n",
+    "\n",
+    "y_predicted = reg_line()\n",
     "y_predicted\n",
     "\n",
     "# 10.155092592592592"
