automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "x_new = 7\n",
-    "\n",
+    "m = calc_slope(X,Y)\n",
     "y_predicted = reg_line()\n",
     "y_predicted\n",
     "\n",
