--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "x_new = 7\n",
-    "y_predicted = reg_line()\n",
+    "y_predicted = reg_line(m,b,7)\n",
     "y_predicted\n",
     "\n",
     "# 10.155092592592592"
