--- a/index.ipynb
+++ b/index.ipynb
@@ -332,7 +332,7 @@
    ],
    "source": [
     "x_new = 7\n",
-    "y_predicted = reg_line(m,b,7)\n",
+    "y_predicted = m*x_new\n",
     "y_predicted\n",
     "\n",
     "# 10.155092592592592"
