--- a/index.ipynb
+++ b/index.ipynb
@@ -360,7 +360,7 @@
     }
    ],
    "source": [
-    "# Plot as above and show the predicted value\n"
+    "plt.scatter(X,Y, label = # Plot as above and show the predicted value\n"
    ]
   },
   {
