--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    ],
    "source": [
     "plt.scatter(X,Y, label = 'data')\n",
-    "plt.scatter# Plot as above and show the predicted value\n"
+    "plt.scatter(x_new, y_predicted, labe# Plot as above and show the predicted value\n"
    ]
   },
   {
