--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,8 @@
    ],
    "source": [
     "plt.scatter(X,Y, label = 'data')\n",
-    "plt.scatter(x_new, y_predicted, label = 'Prediction:' +round(y_predicted, 1)# Plot as above and show the predicted value\n"
+    "plt.scatter(x_new, y_predicted, label = 'Prediction:' +round(y_predicted, 1))\n",
+    "plt.plot(X# Plot as above and show the predicted value\n"
    ]
   },
   {
