--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
    "source": [
     "plt.scatter(X,Y, label = 'data')\n",
     "plt.scatter(x_new, y_predicted, label = 'Prediction:' +round(y_predicted, 1))\n",
-    "plt.plot(X# Plot as above and show the predicted value\n"
+    "plt.plot(X, regression_line, # Plot as above and show the predicted value\n"
    ]
   },
   {
